# Apu-botti

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/utils/: translate.rs
translator/: Cargo.toml
