[package]
name = "translator"
version = "0.1.0"
edition = "2018"

[dependencies.reqwest]
version = "0.11.4"

[dependencies.tokio]
version = "1.9.0"
features = ["rt-multi-thread","signal"]

[dependencies.serenity]
version = "0.10.8"
default-features = false
features = ["cache", "client", "gateway","standard_framework", "rustls_backend", "model","framework"]

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
futures = "0.3.15"